--- a/styles.css
+++ b/styles.css
@@ -786,3 +786,58 @@ footer {
    border-radius: 1rem;
    margin-bottom: 1.5rem;
 }
+
+.skills-section {
+   max-width: 1200px;
+   margin: 3rem auto;  /* consistent vertical spacing */
+   padding: 0 1.5rem;  /* slightly reduced padding for a cleaner look */
+}
+
+.skills-section h2 {
+   text-align: center;
+   font-size: 4rem;
+   font-weight: 600;
+   margin-bottom: 3rem;
+}
+
+.skills-section .text {
+   text-align: center;
+   margin-bottom: 30px;
+   font-size: 20px;
+}
+
+.skills-section .cells {
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+   gap: 20px;  /* adds uniform space between cells */
+}
+
+.skills-section .cells .cell {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 200px;
+   padding: 10px 20px;
+   background-color: white;
+   border: 1.5px solid #d3d3d3;
+   border-radius: 5px;
+   gap: 10px;
+}
+
+.skills-section .cells .cell img {
+   width: 30px;
+   height: 30px;
+   object-fit: contain;
+   border-radius: 2px;
+}
+
+.skills-section .cells .cell span {
+   font-size: 18px;
+}
+
+:root.dark .skills-section .cells .cell span {
+   color: black;
+}
+
+
