--- a/styles.css
+++ b/styles.css
@@ -839,5 +839,17 @@ footer {
 :root.dark .skills-section .cells .cell span {
    color: black;
 }
-
-
+@media(max-width:600px){
+   section {
+       text-align: center;
+       padding-left: 5%;
+       padding-right: 5%;
+       margin: 0 auto;
+   }
+}
+footer{
+   background: linear-gradient(to right, #ffffff, #696363);
+   background-size: 100% 100%;
+   background-repeat: no-repeat;
+   /* ...existing styles... */
+}
