--- a/styles.css
+++ b/styles.css
@@ -803,7 +803,7 @@ footer {
 .skills-section .text {
    text-align: center;
    margin-bottom: 30px;
-   font-size: 20px;
+   font-size: 1.1rem;
 }
 
 .skills-section .cells {
